--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,33 +17,36 @@ services:
       - DB_HOST=mysql
       - DB_PORT=3306
       - DB_DATABASE=mvc_crud
-      - DB_USERNAME=mvc_user
-      - DB_PASSWORD=mvc_password
+      - DB_USERNAME=root
+      - DB_PASSWORD=root_password
 
   # MySQL Service
   mysql:
     image: mysql:8.0
+    platform: linux/amd64
+    restart: always
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: mvc_crud
-      MYSQL_USER: mvc_user
-      MYSQL_PASSWORD: mvc_password
       MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: mvc_crud
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
       - app-network
+    command: --default-authentication-plugin=mysql_native_password
 
   # phpMyAdmin Service
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
+    restart: always
     ports:
       - "8081:80"
     environment:
       PMA_HOST: mysql
-      PMA_PORT: 3306
-      UPLOAD_LIMIT: 300M
+      PMA_USER: root
+      PMA_PASSWORD: root_password
+      MYSQL_ROOT_PASSWORD: root_password
     depends_on:
       - mysql
     networks:
